--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 <!-- Game Shopping Modal -->
 <div id="gameShoppingModal" class="shopping-modal" aria-hidden="true" style="display:none;">
     <div class="shopping-modal-content">
-        <button class="modal-close" onclick="closeProductModal()" aria-label="Close">×</button>
+        <button class="modal-close" onclick="closeProductModal()" aria-label="Close">❌</button>
+      
         
         <div class="shopping-grid">
             <!-- Left side - Game info -->
