--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <header>
     <div class="container header-inner">
-        <div class="logo"><img src="assets/logo.svg" alt="RS BAZAR" class="logo-img"></div>
+        <div class="logo"><img src="https://image2url.com/images/1766214401911-dc85818d-808f-42b6-bd59-1d3d4691f574.jpeg" alt="RS BAZAR" class="logo-img"></div>
         <nav class="nav">
             <a href="#">Home</a>
             <a href="#games">Shop</a>
