--- a/login.html
+++ b/login.html
@@ -141,12 +141,46 @@ function findUser(identifier) {
     return null;
 }
 
+// API call helper function
+async function apiCall(endpoint, options = {}) {
+    const baseURL = 'http://127.0.0.1:5000';
+    const url = `${baseURL}${endpoint}`;
+
+    const defaultOptions = {
+        method: 'GET',
+        headers: {
+            'Content-Type': 'application/json',
+        },
+        ...options
+    };
+
+    // Add authorization header if user is logged in
+    const token = localStorage.getItem('token');
+    if (token) {
+        defaultOptions.headers['Authorization'] = `Bearer ${token}`;
+    }
+
+    try {
+        const response = await fetch(url, defaultOptions);
+        const data = await response.json();
+
+        if (!response.ok) {
+            throw new Error(data.message || `HTTP error! status: ${response.status}`);
+        }
+
+        return data;
+    } catch (error) {
+        console.error('API call failed:', error);
+        throw error;
+    }
+}
+
 // Show tab
 function showTab(tab) {
     document.getElementById('loginTab').classList.remove('active');
     document.getElementById('signupTab').classList.remove('active');
     document.querySelectorAll('.tab-btn').forEach(function(btn) { btn.classList.remove('active'); });
-    
+
     if (tab === 'login') {
         document.getElementById('loginTab').classList.add('active');
         document.querySelectorAll('.tab-btn')[0].classList.add('active');
@@ -154,7 +188,7 @@ function showTab(tab) {
         document.getElementById('signupTab').classList.add('active');
         document.querySelectorAll('.tab-btn')[1].classList.add('active');
     }
-    
+
     document.getElementById('errorMsg').classList.remove('show');
     document.getElementById('successMsg').classList.remove('show');
 }
@@ -178,7 +212,7 @@ document.getElementById('loginForm').addEventListener('submit', async function(e
     }
 
     try {
-        const data = await apiCall('/login', {
+        const data = await apiCall('/api/login', {
             method: 'POST',
             body: JSON.stringify({ identifier: username, password: password })
         });
@@ -241,7 +275,7 @@ document.getElementById('signupForm').addEventListener('submit', async function(
     }
 
     try {
-        await apiCall('/register', {
+        await apiCall('/api/register', {
             method: 'POST',
             body: JSON.stringify({ username: username, email: email, password: password })
         });
